Fixed fonts
Squashed commit of the following:

commit a1e262b91086042939453266417f1063321b6e5a
Author: Tristan MacKinlay <tsmackinlay@gmail.com>
Date:   Mon Oct 21 11:43:47 2019 -0700

    removed old css file

commit e1f2049b0055d6761b12f139d7523bbc33987edd
Author: Tristan MacKinlay <tsmackinlay@gmail.com>
Date:   Mon Oct 21 11:41:18 2019 -0700

    fixed fonts

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,13 +15,13 @@
 }
 
 button.submit-premises {
-  font-family: Book Antiqua;
+  font-family: Book Antiqua, serif;
   margin-left: 8px;
 }
 
 select {
   margin-bottom: 20px;
-  font-family: Book Antiqua;
+  font-family: Book Antiqua, serif;
 }
 
 button {
